[tool.poetry]
name = "protohackers"
version = "0.1.0"
description = ""
authors = ["Alexandr Chebatarev <alexandr.chebatarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
